-fix the error of app crashing upon liking a post (inconsistent handling of "likedby" field of Post model between frontend and backend) -fix the color of follow button text not being visible when it's disabled (during follow api call is in progress)

--- a/src/styles/FollowButton.css
+++ b/src/styles/FollowButton.css
@@ -1,5 +1,9 @@
-.followButton{
-    font-size: 15px;
+.followButton:disabled{
+  color: gray !important;
+}
+
+.followButton.dark-mode:disabled{
+  color: darkgrey;
 }
 
 
